cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Enrico Bandiera
maintainer:         e.bandiera@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day1
                    , Day9

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , array
                    , containers
                    , text
                    , lens
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        aoc2021

    hs-source-dirs:   app
    default-language: Haskell2010
